2010-07-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14929: htmlArea RTE: Font Family and Font Size Dropdown boxes don't open

2010-07-04 Francois Suter  <francois@typo3.org>

	* Fixed bug #14989: Use TYPO3_REQUESTTYPE consistently for CLI calls detection

2010-07-03 Francois Suter  <francois@typo3.org>

	* Cleanup #14987: Spelling mistakes in cli_dispatch.phpsh

2010-07-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14947: Missing closing div in db_new_content_el.php (Thanks to Georg Ringer)

2010-06-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #14810: Follow-up to bug #13670: Export module does not keep pagetree configuration (exports only the page tree) (Thanks to Thomas Juhnke) 

2010-06-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14905: htmlArea RTE: Image dialogue shows tab "Current picture" when there is no current image

2010-06-29  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #14553: topFrameH configuration option doesn't work anymore
	
2010-06-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14830: htmlArea RTE: Entering line breaks with Safari not possible

2010-06-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14886: htmlArea RTE: Incorrect function scope when error is raised
	* Fixed bug #14887: htmlArea RTE: RTE may be started before style sheets are loaded

2010-06-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14876: htmlArea RTE: SelectFont plugin may cause js error
	* Follow-up to bug #14793: htmlArea RTE: Problematic icons in IE6

2010-06-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14870: typo in parameter type causes php error (Thanks to Jigal van Hemert)
	* Fixed bug #14866: Quicktime audio format m4a isn't supported
	* Fixed bug #14847: Bug: Template Analyzer: Line numbers barely readable (Thanks to Andy Grunwald)
	* Fixed bug #14857: Reports Module: Wrong icon and a styling problem (Thanks to Georg Ringer)
	* Fixed bug #14834: About module need padding